# coco

./: .gitignore  LICENSE.txt  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
cdhc/: README.md  cdhc.py  config_template.py  data_generation.py  ges.py  method.py  model.py  network.py  reged.py  requirements.txt  sos.py  synthetic.py  synthetic_plots.py  to_hexbin.R  util.py
coco/: co_causal_tests.py  co_co.py  co_confounding_tests.py  co_shift_tests.py  co_test_causal.py  co_test_confounding.py  co_test_type.py  co_wrappers.py  dag_confounded.py  dag_gen.py  eval.py  fci.py  gaussian_process_RFF.py  gaussian_process_regression.py  gaussian_process_regularized.py  invariance_confounding.py  main.py  mi.py  mi_hyp.py  mi_sampling.py  mi_variance.py  todo.md  utils.py  utils_coco.py
coco.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
experiments/: README.md  examples.py  main.py  method_types.py  reproduce_fig2.py  reproduce_fig3.py  reproduce_supporting.py  results_coco.py  run_coco.py
jci/: fci_wrapper.R
linc/: README.md  __init__.py  aold_score_mdl.py  aold_score_mdl_pairwise.py  dag_eval.py  data_read.py  data_write.py  example_introduction.py  example_mec.py  example_sparse_shift.py  examples.py  function_types.py  gen_context_data.py  gen_context_data_new.py  ges_mdl.py  gpr_mdl.py  gpr_mdl_old.py  intervention_types.py  linear_dag.py  main.py  nonlinear_dag.py  out.py  out_naming.py  pi.py  pi_dag.py  pi_dag_search.py  pi_mec.py  pi_mechanism_search.py  pi_search_clustering.py  pi_search_ilp.py  pi_search_mdl.py  pi_tree.py  setup.py  (+19 more)
(+927 files in other folders)
